fix spacing

--- a/harmonix-client/src/pagelets-harmonix/2CheckItOut/CheckItOut.css
+++ b/harmonix-client/src/pagelets-harmonix/2CheckItOut/CheckItOut.css
@@ -1,16 +1,18 @@
 @import '../../constants/colors.css';
 @import '../../constants/layout.css';
 
-.checkout-heading {
+#checkout-heading {
   text-align: center;
+  margin: 2rem auto;
+}
+#quarantine-heading {
+  text-align: center;
+  margin: 2rem auto;
 }
 
 .player-container {
-  /* border: var(--construction); */
-  /* padding: 5rem; */
-  /* margin: 0 auto; */
   width: 100%;
-  margin: 1% auto;
+  margin: 1rem 1rem;
 }
 .spacer-container {
   margin: 50px 0px;
